Bug 1752188: Error-handling cleanups. r=jgilbert

Document various things. Spell out that the error messages are UTF-8.

Let `server.rs`'s `ErrorBuffer` take a `&str` instead of a `String`.

Differential Revision: https://phabricator.services.mozilla.com/D146767